<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thehoick.runnerbecomes.StepsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/title"
        android:textSize="19sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="404dp"
        android:text="@string/step_one"
        android:id="@+id/textViewStepOne"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_two"
        android:id="@+id/textViewStepTwo"
        android:layout_below="@+id/textViewStepOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_three"
        android:id="@+id/textViewStepThree"
        android:layout_below="@+id/textViewStepTwo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_four"
        android:id="@+id/textViewStepFour"
        android:layout_below="@+id/textViewStepThree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_five"
        android:id="@+id/textViewStepFive"
        android:layout_below="@+id/textViewStepFour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />

</FrameLayout>
